0.8.114 * fix ESP8266 compile * fix history graph * fix close button color of modal windows in dark mode #1598 * fix only one total field in `/live` #1579

--- a/src/web/html/style.css
+++ b/src/web/html/style.css
@@ -758,6 +758,7 @@ div.hr {
     font-family: inherit;
     cursor: pointer;
     padding: 0;
+    color: var(--fg);
 }
 
 button.close {
